--- a/Yours-prior_prototype/signup.html
+++ b/Yours-prior_prototype/signup.html
@@ -85,6 +85,11 @@ body{
     accent-color: #fff;
     margin-right: 5px;
 }
+.terms a {
+    color: #8f8f8f;
+    text-decoration: none;
+    font-weight: 600;
+}
 
 .wrapper .btn{
     width: 100%;
@@ -191,7 +196,7 @@ body{
 
             <div class="terms">
                 <label>
-                    <input type="checkbox"> I agree to the Terms & Conditions
+                    <input type="checkbox"> I agree to the <a href="#">Terms and Conditions</a> 
                 </label>
             </div>
 
